Prevent search bar overlap
Fixes DD 71427 581

--- a/app/design/frontend/Travers/default/styles/blocks/_algolia.scss
+++ b/app/design/frontend/Travers/default/styles/blocks/_algolia.scss
@@ -80,7 +80,7 @@
     &--sticky {
         .algolia-search-block {
             display: none;
-            max-width: 300px;
+            max-width: 220px;
             margin-right: 70px;
             padding-bottom: $indent__xs;
             flex-basis: auto;
